deploy/development/map-app/deployment-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-app
  template:
    metadata:
      labels:
        app: map-app
    spec:
      serviceAccountName: makeaplea-dev
      containers:
          - name: map-app
            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/makeaplea-dev-ecr:map-latest
            imagePullPolicy: Always
            ports:
              - containerPort: 3000
          - name: map-celery
            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/makeaplea-dev-ecr:map-celery-latest
            imagePullPolicy: Always
            ports:
              - containerPort: 3001
