deploy/development/map-app/service-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-app-service
  labels:
    app: map-app-service
spec:
  ports:
    - port: 3000
      name: http
      targetPort: 3000
  selector:
    app: map-app
