deploy/development/map-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-service
  labels:
    app: map-service
spec:
  ports:
    - port: 3000
      name: http
      targetPort: 3000
  selector:
    app: map-app
