deploy/development/map-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: makeaplea
  namespace: makeaplea-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: makeaplea-makeaplea-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - dev-make-a-plea.apps.live.cloud-platform.service.justice.gov.uk
        - dev-api-make-a-plea.apps.live.cloud-platform.service.justice.gov.uk
      secretName: make-a-plea-app-cert

  rules:
    - host: dev-make-a-plea.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: map-service
                port:
                  number: 3000
    - host: dev-api-make-a-plea.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: map-service
                port:
                  number: 3001
